--- a/templates/pos/return.html
+++ b/templates/pos/return.html
@@ -184,7 +184,7 @@ function searchName() {
   <br>
   <h3>Invoice History </h3>
   <h4 style="text-align: end;"><a href="{% url 'return_details' %}" class="btn btn-warning">View Return History</a></h4>
-  <div style="margin-left:30%">  <input type="text" id="searchInput" onkeyup="searchName()" placeholder="Search by Name ">  <input style="margin-left: 2%;" type="text" id="searchInput2" onkeyup="searchMedicine()" placeholder="Search by phone number"></div>
+  <div class='mb-3'style="margin-left:30%">  <input type="text" id="searchInput" onkeyup="searchName()" placeholder="Search by Name ">  <input style="margin-left: 2%;" type="text" id="searchInput2" onkeyup="searchMedicine()" placeholder="Search by phone number"></div>
 
   <div style="max-height: 70vh; display:block; overflow-y:auto">
   <table class="table" id="invoiceTable">
