--- a/templates/pos/return_details.html
+++ b/templates/pos/return_details.html
@@ -40,7 +40,8 @@ function searchName() {
     <!-- partial -->
     <div class="content-wrapper">
 <h3>Invoice History </h3>
-  <div style="margin-left:30%">  <input type="text" id="searchInput" onkeyup="searchName()" placeholder="Search by Name or Phone"> 
+  <div class='mb-3' style="margin-left:30%">  
+    <input type="text" id="searchInput" onkeyup="searchName()" placeholder="Search by Name or Phone"> 
 </div>
 
   <div style="max-height: 70vh; display:block; overflow-y:auto">
