--- a/templates/base.html
+++ b/templates/base.html
@@ -1,134 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Pharmacy Management</title>
-        <link rel="stylesheet" href="/static/node_modules/font-awesome/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="/static/node_modules/perfect-scrollbar/dist/css/perfect-scrollbar.min.css" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="/static/node_modules/flag-icon-css/css/flag-icon.min.css" />
-        <link rel="stylesheet" href="/static/css/style.css" />
-        <link rel="shortcut icon" href="/static/images/favicon.png" />
-        
-        {% block head %}
-            
-        {% endblock head %}
-            
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title>Pharmacy Management</title>
+  <link rel="stylesheet" href="/static/node_modules/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/static/node_modules/perfect-scrollbar/dist/css/perfect-scrollbar.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/static/node_modules/flag-icon-css/css/flag-icon.min.css" />
+  <link rel="stylesheet" href="/static/css/style.css" />
+  <link rel="shortcut icon" href="/static/images/favicon.png" />
+
+  {% block head %} {% endblock head %}
+  <style>
+    @media screen and (max-width: 1280px) {
+      #sidebar {
+        display: none;
+      }
+    }
+
+    @media (min-width: 1280px) {
+
+      /* Adjust the breakpoint as needed */
+      .btn-toggle-offcanvas {
+        display: none;
+        color: white;
+      }
+    }
+  </style>
 </head>
-      
+
 <body>
-    {% comment %} <div style="height : 100vh;"> {% endcomment %}
-     <!-- partial:partials/_navbar.html -->
-      <nav class="navbar navbar-default col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
-        <div class="bg-white text-center navbar-brand-wrapper">
-          <a class="navbar-brand brand-logo" href="/">Pharmacy</a>
-          <a class="navbar-brand brand-logo-mini" href="/"><img src="/static/images/logo_star_mini.jpg" alt=""></a>
-        </div>
-        <div class="navbar-menu-wrapper d-flex align-items-center">
-          <button class="navbar-toggler navbar-toggler d-none d-lg-block navbar-dark align-self-center mr-3" type="button" data-toggle="minimize" onclick="toggleBodyClass()">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <ul class="navbar-nav ml-lg-auto d-flex align-items-center flex-row">
-           
-          </ul>
-          <button class="navbar-toggler navbar-dark navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-      </nav>
-  
-      <!-- partial -->
-      <div class="container-fluid">
-        <div class="row row-offcanvas row-offcanvas-right">
-          <!-- partial:partials/_sidebar.html -->
-          <nav class="bg-white sidebar sidebar-offcanvas" id="sidebar">
-            <div class="user-info">
-              <img src="/static/images/med.png" alt="">
-              <p class="name">Pharmacy</p>
-              <p class="designation">Management</p>
-              <span class="online"></span>
-            </div>
-            <ul class="nav">
-              <li class="nav-item" id="dash_ico">
-                <a class="nav-link" href="/">
-                  <img src="/static/images/icons/1.png" alt="">
-                  <span class="menu-title">Dashboard</span>
-                </a>
-              </li>
-              <li class="nav-item" id="wid_ico">
-                <a class="nav-link" href="/medicine">
-                  <img src="/static/images/icons/2.png" alt="">
-                  <span class="menu-title">Medicine</span>
-                </a>
-              </li>
-              <li class="nav-item" id='pos_ico'>
-                <a class="nav-link" href="/pos">
-                  <img src="/static/images/icons/005-forms.png" alt="">
-                  <span class="menu-title">POS</span>
-                </a>
-              </li>
-              <li class="nav-item" id="purchase_ico">
-                <a class="nav-link" href="/purchase">
-                  <img src="/static/images/icons/4.png" alt="">
-                  <span class="menu-title">Purchase</span>
-                </a>
-              </li>
-              <li class="nav-item" id="purchase_return_ico">
-                <a class="nav-link" href="/return_purchase">
-                  <img src="/static/images/icons/4.png" alt="">
-                  <span class="menu-title">Purchase Return</span>
-                </a>
-              </li>
-              <li class="nav-item" id="stocks_ico">
-                <a class="nav-link" href="/stocks">
-                  <img src="/static/images/icons/5.png" alt="">
-                  <span class="menu-title">Stocks</span>
-                </a>
-              </li>
-              <li class="nav-item" id="supplier_ico">
-                <a class="nav-link" href="/supplier">
-                  <img src="/static/images/icons/6.png" alt="">
-                  <span class="menu-title">Supplier</span>
-                </a>
-              </li>
-              <li class="nav-item" id="return_ico">
-                <a class="nav-link" href="/return">
-                  <img src="/static/images/icons/6.png" alt="">
-                  <span class="menu-title">Invoice & Return</span>
-                </a>
-              </li>
-             
-              <li class="nav-item" id="acc_ico">
-                <a class="nav-link" href="/accounts">
-                  <img src="/static/images/icons/7.png" alt="">
-                  <span class="menu-title">Accounts</span>
-                </a>
-              </li>
-            </ul>
-            <footer style=" position: fixed; bottom: 0; width: inherit; background-color: #ddd; padding: 10px;">
-            {% comment %} <footer class="d-flex justify-content-end align-items-center mt-auto" style="background-color: #ddd; padding: 10px;"> {% endcomment %}
-              <div class="container-fluid clearfix" style="font-family: sans-serif; ">
-                <span class="float-center">
-                  Developed by<a href="https://www.linkedin.com/in/ritik-sinha-7468a716a/"> Ritik Sinha </a> | Codigo Aldea &copy; 2024
-                </span>
-              </div>
-           </footer>
-          </nav>
-          {% block page %}
-              
-          {% endblock page %}
+    <!-- partial:partials/_navbar.html -->
+    <nav class="navbar navbar-default w-100 p-0 fixed-top d-flex flex-row navbar-collapse">
+      <div class="bg-white text-center navbar-brand-wrapper">
+        <a class="navbar-brand brand-logo" href="/">Pharmacy</a>
+        <a class="navbar-brand brand-logo-mini" href="/">
+          <img src="/static/images/logo_star_mini.jpg" alt="" />
+        </a>
       </div>
-      
-    {% comment %} </div> {% endcomment %}
+      <div class="navbar-menu-wrapper d-flex align-items-center">
+        <button class="navbar-toggler navbar-toggler d-none d-lg-block navbar-dark align-self-center mr-3" type="button"
+          data-toggle="minimize" onclick="toggleBodyClass()" title="Toggle Navbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <ul class="navbar-nav ml-lg-auto d-flex align-items-center flex-row"></ul>
+        <!-- for the side bar -->
+        <button class="navbar-toggler navbar-dark navbar-toggler-right d-lg-none align-self-center" type="button"
+          data-toggle="offcanvas" id = "sidebar" title="Open Offcanvas Menu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- {% comment %} for the mobile device {% endcomment %} -->
+        <button class="navbar-toggler navbar-dark navbar-toggler-right d-lg-none align-self-center" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">
+          <span class="navbar-toggler-icon "></span>
+        </button>
+      </div>
+    </nav>
+
+    <!-- partial -->
+    <div class="container-fluid" >
+      <div class="row row-offcanvas row-offcanvas-right" id="sidebar">
+        <!-- partial:partials/_sidebar.html -->
+        <nav class="d-flex flex-column bg-white sidebar sidebar-offcanvas " tabindex="-1" id="sidebar">
+          <div class="user-info">
+            <img src="/static/images/med.png" alt="" />
+            <p class="name">Pharmacy</p>
+            <p class="designation">Management</p>
+            <span class="online"></span>
+          </div>
+          <ul class="nav nav-pills flex-column mb-auto">
+            <li class="nav-item" id="dash_ico">
+              <a class="nav-link" href="/">
+                <img src="/static/images/icons/1.png" alt="" />
+                <span class="menu-title">Dashboard</span>
+              </a>
+            </li>
+            <li class="nav-item" id="wid_ico">
+              <a class="nav-link" href="/medicine">
+                <img src="/static/images/icons/2.png" alt="" />
+                <span class="menu-title">Medicine</span>
+              </a>
+            </li>
+            <li class="nav-item" id="pos_ico">
+              <a class="nav-link" href="/pos">
+                <img src="/static/images/icons/005-forms.png" alt="" />
+                <span class="menu-title">POS</span>
+              </a>
+            </li>
+            <li class="nav-item" id="purchase_ico">
+              <a class="nav-link" href="/purchase">
+                <img src="/static/images/icons/4.png" alt="" />
+                <span class="menu-title">Purchase</span>
+              </a>
+            </li>
+            <li class="nav-item" id="purchase_return_ico">
+              <a class="nav-link" href="/return_purchase">
+                <img src="/static/images/icons/4.png" alt="" />
+                <span class="menu-title">Purchase Return</span>
+              </a>
+            </li>
+            <li class="nav-item" id="stocks_ico">
+              <a class="nav-link" href="/stocks">
+                <img src="/static/images/icons/5.png" alt="" />
+                <span class="menu-title">Stocks</span>
+              </a>
+            </li>
+            <li class="nav-item" id="supplier_ico">
+              <a class="nav-link" href="/supplier">
+                <img src="/static/images/icons/6.png" alt="" />
+                <span class="menu-title">Supplier</span>
+              </a>
+            </li>
+            <li class="nav-item" id="return_ico">
+              <a class="nav-link" href="/return">
+                <img src="/static/images/icons/6.png" alt="" />
+                <span class="menu-title">Invoice & Return</span>
+              </a>
+            </li>
+
+            <li class="nav-item" id="acc_ico">
+              <a class="nav-link" href="/accounts">
+                <img src="/static/images/icons/7.png" alt="" />
+                <span class="menu-title">Accounts</span>
+              </a>
+            </li>
+          </ul>
+          <!-- <hr> -->
+          <div class="container text-center">
+            <b>Made by <br>
+            Codigo Aldea | <a href="https://www.linkedin.com/in/ritik-sinha-7468a716a/">Ritik Sinha</a> <br>
+            &#169; 2024</b>
+          </div>
+          <hr>
+        </nav>
+      </div>
+      <div class=" container-fluid">
+      {% block page %} {% endblock page %}
+    </div>
+    </div>
+    <!-- offcanvas menu Dhawal -->
+    <div class="offcanvas offcanvas-start " data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
+      id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+      <div class="offcanvas-header">
+        <div class="container text-center">
+          <div class="row">
+            <div class="col">
+              <h4>Pharmacy Management System</h4>
+            </div>
+            <div class="col-1">
+              <button type="button" class="btn-close btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item" id="dash_ico">
+            <a class="nav-link" href="/">
+              <img src="/static/images/icons/1.png" height="20px">
+              <span class="menu-title"><b>Dashboard</b></span>
+            </a>
+          </li>
+          <li class="nav-item" id="wid_ico">
+            <a class="nav-link" href="/medicine">
+              <img src="/static/images/icons/2.png" height="15px">
+              <span class="menu-title"><b>Medicine</b></span>
+            </a>
+          </li>
+          <li class="nav-item" id='pos_ico'>
+            <a class="nav-link" href="/pos">
+              <img src="/static/images/icons/005-forms.png" height="20px">
+              <span class="menu-title"><b>POS</b></span>
+            </a>
+          </li>
+          <li class="nav-item" id="purchase_ico">
+            <a class="nav-link" href="/purchase">
+              <img src="/static/images/icons/4.png"  height="20px">
+              <span class="menu-title"><b>Purchase</b></span>
+            </a>
+          </li>
+          <li class="nav-item" id="purchase_return_ico">
+            <a class="nav-link" href="/return_purchase">
+              <img src="/static/images/icons/4.png" height="20px">
+              <span class="menu-title"><b>Purchase Return</b></span>
+            </a>
+          </li>
+          <li class="nav-item" id="stocks_ico">
+            <a class="nav-link" href="/stocks">
+              <img src="/static/images/icons/5.png" height="20px">
+              <span class="menu-title"><b>Stocks</b></span>
+            </a>
+          </li>
+          <li class="nav-item" id="supplier_ico">
+            <a class="nav-link" href="/supplier">
+              <img src="/static/images/icons/6.png" alt="">
+              <span class="menu-title"><b>Supplier</b></span>
+            </a>
+          </li>
+          <li class="nav-item" id="return_ico">
+            <a class="nav-link" href="/return">
+              <img src="/static/images/icons/6.png" alt="">
+              <span class="menu-title"><b>Invoice & Return</b></span>
+            </a>
+          </li>
+          <li class="nav-item" id="acc_ico">
+            <a class="nav-link" href="/accounts">
+              <img src="/static/images/icons/7.png" height="20px">
+              <span class="menu-title"><b>Accounts</b></span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <hr>
+      <div class="container text-center">
+        <b>Made by <br>
+        Codigo Aldea | Ritik Sinha <br>
+        &#169; 2024</b>
+      </div>
+      <hr>
+    </div>
+    <!-- offcanvas menu end -->
     <script>
       function toggleBodyClass() {
-          // Get the body element
-          var body = document.body;
+        // Get the body element
+        var body = document.body;
 
-          // Add the 'minimize' class to the body
-          body.classList.toggle('sidebar-icon-only');
+        // Add the 'minimize' class to the body
+        body.classList.toggle("sidebar-icon-only");
       }
     </script>
     <script src="/static/node_modules/jquery/dist/jquery.min.js"></script>
@@ -136,15 +240,16 @@
     <script src="/static/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/static/node_modules/chart.js/dist/Chart.min.js"></script>
     <!-- <script src="/static/node_modules/perfect-scrollbar/dist/js/perfect-scrollbar.jquery.js"></script>  -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5NXz9eVnyJOA81wimI8WYE08kW_JMe8g&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5NXz9eVnyJOA81wimI8WYE08kW_JMe8g&callback=initMap"
+      async defer></script>
     <script src="/static/js/off-canvas.js"></script>
     <script src="/static/js/hoverable-collapse.js"></script>
     <!-- <script src="/static/js/misc.js"></script> -->
     <script src="/static/js/chart.js"></script>
     <script src="/static/js/maps.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    
-  </body>
-  
-  </html>
-  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
+</body>
+
+</html>
