--- a/templates/base.html
+++ b/templates/base.html
@@ -220,7 +220,7 @@
       <hr>
       <div class="container text-center">
         <b>Made by <br>
-        Codigo Aldea | Ritik Sinha <br>
+        Codigo Aldea | <a href="https://www.linkedin.com/in/ritik-sinha-7468a716a/">Ritik Sinha</a> <br>
         &#169; 2024</b>
       </div>
       <hr>
@@ -239,14 +239,8 @@
     <script src="/static/node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="/static/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/static/node_modules/chart.js/dist/Chart.min.js"></script>
-    <!-- <script src="/static/node_modules/perfect-scrollbar/dist/js/perfect-scrollbar.jquery.js"></script>  -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5NXz9eVnyJOA81wimI8WYE08kW_JMe8g&callback=initMap"
-      async defer></script>
     <script src="/static/js/off-canvas.js"></script>
     <script src="/static/js/hoverable-collapse.js"></script>
-    <!-- <script src="/static/js/misc.js"></script> -->
-    <script src="/static/js/chart.js"></script>
-    <script src="/static/js/maps.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"></script>
