--- a/templates/pos/pos.html
+++ b/templates/pos/pos.html
@@ -137,8 +137,8 @@
         <div class="form-group">
           <label for="exampleInputPassword1">Unit</label>
           <select class="form-select" aria-label="Default select example" name="unit" required>
-            <option selected >Open this select menu</option>
-            <option value="piece">piece</option>
+            {% comment %} <option >Open this select menu</option> {% endcomment %}
+            <option selected value="piece">piece</option>
             <option value="strip">strip</option>
             <option value="box">box</option>
           </select>
