--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
   {% block head %} {% endblock head %}
   <style>
-    @media screen and (max-width: 1280px) {
+    @media screen and (max-width: 1000px) {
       #sidebar {
         display: none;
       }
@@ -64,7 +64,7 @@
 
     <!-- partial -->
     <div class="container-fluid" >
-      <div class="row row-offcanvas row-offcanvas-right" id="sidebar">
+      <div class="row row-offcanvas" id="sidebar">
         <!-- partial:partials/_sidebar.html -->
         <nav class="d-flex flex-column bg-white sidebar sidebar-offcanvas " tabindex="-1" id="sidebar">
           <div class="user-info">
